[project]
name = "machine-learning-project"
version = "0.1.0"
description = "Online Payments Fraud Detection - Machine Learning Final Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "imbalanced-learn>=0.12.4",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]
